--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -65,11 +65,14 @@ a {
   gap: 60rem;
 }
 .project {
-  background-color: #1e1e1e;
-  border-radius: 60rem;
+  background-color: #11111185;
+  backdrop-filter: blur(10rem);
   width: 960rem;
   display: flex;
   padding: 40rem;
+  border: 5rem solid transparent;
+  background-clip: padding-box;
+  border-radius: 50rem;
 }
 .project > div {
   width: 50%;
@@ -89,11 +92,14 @@ a {
   gap: 20rem;
 }
 .case #wrapper > * {
-  background-color: #1e1e1e;
-  border-radius: 60rem;
+  background-color: #11111185;
+  backdrop-filter: blur(10rem);
   width: 960rem;
   display: flex;
   padding: 40rem;
+  border: 5rem solid transparent;
+  background-clip: padding-box;
+  border-radius: 50rem;
   flex-direction: column;
   gap: 60rem;
 }
@@ -132,8 +138,10 @@ a {
   gap: 20rem;
 }
 .case .lector img {
-  width: 100%;
+  width: 60%;
   border-radius: 40rem;
   filter: grayscale();
-  margin-bottom: 40rem;
+}
+.case .lector p {
+  margin-top: -20rem;
 }
