--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -70,9 +70,19 @@ a {
   width: 960rem;
   display: flex;
   padding: 40rem;
+  gap: 40rem;
   border: 5rem solid transparent;
   background-clip: padding-box;
   border-radius: 50rem;
+  transition: transform ease 0.3s;
+}
+.project:hover .projectIMG {
+  background-position: bottom left;
+  transition: all ease 3s;
+}
+.project:hover {
+  transform: translateY(-20rem);
+  transition: transform ease 0.6s;
 }
 .project > div {
   width: 50%;
@@ -144,4 +154,41 @@ a {
 }
 .case .lector p {
   margin-top: -20rem;
+}
+.projectIMG {
+  background-image: url('../images/helloLSH.png');
+  background-size: contain;
+  background-position: top left;
+  border-radius: 40rem;
+}
+footer,
+nav {
+  display: flex;
+  flex-direction: row !important;
+  justify-content: flex-end;
+  gap: 40rem;
+  background-color: #11111185;
+  backdrop-filter: blur(10rem);
+  width: 960rem;
+  padding: 10rem 40rem;
+  border: 5rem solid transparent;
+  background-clip: padding-box;
+  border-radius: 50rem;
+}
+footer .icon {
+  filter: grayscale(100%);
+  height: 40rem;
+  width: 40rem;
+  background-size: cover;
+}
+.tg {
+  background-image: url('../images/social/tg.png');
+  opacity: 0.6;
+}
+.vk {
+  background-image: url('../images/social/vk.png');
+}
+nav a:hover {
+  color: #0f6700;
+  transition: all ease 0.6s;
 }
