--- a/docs/main.css
+++ b/docs/main.css
@@ -220,11 +220,24 @@ a {
   gap: 60rem;
 }
 .project {
-  background-color: #1e1e1e;
-  border-radius: 60rem;
+  background-color: #11111185;
+  backdrop-filter: blur(10rem);
   width: 960rem;
   display: flex;
   padding: 40rem;
+  gap: 40rem;
+  border: 5rem solid transparent;
+  background-clip: padding-box;
+  border-radius: 50rem;
+  transition: transform ease 0.3s;
+}
+.project:hover .projectIMG {
+  background-position: bottom left;
+  transition: all ease 3s;
+}
+.project:hover {
+  transform: translateY(-20rem);
+  transition: transform ease 0.6s;
 }
 .project > div {
   width: 50%;
@@ -244,11 +257,14 @@ a {
   gap: 20rem;
 }
 .case #wrapper > * {
-  background-color: #1e1e1e;
-  border-radius: 60rem;
+  background-color: #11111185;
+  backdrop-filter: blur(10rem);
   width: 960rem;
   display: flex;
   padding: 40rem;
+  border: 5rem solid transparent;
+  background-clip: padding-box;
+  border-radius: 50rem;
   flex-direction: column;
   gap: 60rem;
 }
@@ -287,10 +303,49 @@ a {
   gap: 20rem;
 }
 .case .lector img {
-  width: 100%;
+  width: 60%;
   border-radius: 40rem;
   filter: grayscale();
-  margin-bottom: 40rem;
+}
+.case .lector p {
+  margin-top: -20rem;
+}
+.projectIMG {
+  background-image: url(images/8adea4d472c9d2857c12.png);
+  background-size: contain;
+  background-position: top left;
+  border-radius: 40rem;
+}
+footer,
+nav {
+  display: flex;
+  flex-direction: row !important;
+  justify-content: flex-end;
+  gap: 40rem;
+  background-color: #11111185;
+  backdrop-filter: blur(10rem);
+  width: 960rem;
+  padding: 10rem 40rem;
+  border: 5rem solid transparent;
+  background-clip: padding-box;
+  border-radius: 50rem;
+}
+footer .icon {
+  filter: grayscale(100%);
+  height: 40rem;
+  width: 40rem;
+  background-size: cover;
+}
+.tg {
+  background-image: url(images/4c5782e23dde453d287a.png);
+  opacity: 0.6;
+}
+.vk {
+  background-image: url(images/a1aae8fe2d28ff536e6c.png);
+}
+nav a:hover {
+  color: #0f6700;
+  transition: all ease 0.6s;
 }
 
 #page-container {
@@ -304,205 +359,34 @@ a {
   font-family: 'Courier New', Courier, monospace;
   font-size: 16rem;
   color: #26ff00;
+  opacity: 0.9;
 }
 
-/* градиентный бг */
-
-:root {
-  --color-bg1: #141414;
-  --color-bg2: #222;
-  --color1: 0, 162, 176;
-  --color2: 60, 143, 3;
-  --color3: 186, 124, 0;
-  --color4: 167, 9, 26;
-  --color5: 106, 0, 89;
-  --color-interactive: 140, 100, 255;
-  --circle-size: 80%;
-  --blending: darken;
-}
-
-@keyframes moveInCircle {
-  0% {
-    transform: rotate(0deg);
+@media screen and (max-width: 780px) {
+  html {
+    font-size: calc(1vw / 7.8);
   }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes moveVertical {
-  0% {
-    transform: translateY(-50%);
-  }
-  50% {
-    transform: translateY(50%);
-  }
-  100% {
-    transform: translateY(-50%);
-  }
-}
-
-@keyframes moveHorizontal {
-  0% {
-    transform: translateX(-50%) translateY(-10%);
-  }
-  50% {
-    transform: translateX(50%) translateY(10%);
-  }
-  100% {
-    transform: translateX(-50%) translateY(-10%);
-  }
-}
-
-.gradient {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  z-index: -2;
-  overflow: hidden;
-  background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
-  top: 0;
-  left: 0;
-  opacity: 0.6;
-
-  svg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 0;
-  }
-
-  .gradients-container {
-    filter: url(#goo) blur(40px);
+  .project,
+  nav,
+  footer,
+  header,
+  .case #wrapper > * {
     width: 100%;
-    height: 100%;
   }
-
-  .g1 {
-    position: absolute;
-    background: radial-gradient(
-        circle at center,
-        rgba(var(--color1), 0.8) 0,
-        rgba(var(--color1), 0) 50%
-      )
-      no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-
-    transform-origin: center center;
-    animation: moveVertical 30s ease infinite;
-
-    opacity: 1;
+  nav {
+    padding: 10rem 40rem;
   }
-
-  .g2 {
-    position: absolute;
-    background: radial-gradient(
-        circle at center,
-        rgba(var(--color2), 0.8) 0,
-        rgba(var(--color2), 0) 50%
-      )
-      no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-
-    transform-origin: calc(50% - 400px);
-    animation: moveInCircle 20s reverse infinite;
-
-    opacity: 1;
+  .project {
+    flex-direction: column;
   }
-
-  .g3 {
-    position: absolute;
-    background: radial-gradient(
-        circle at center,
-        rgba(var(--color3), 0.8) 0,
-        rgba(var(--color3), 0) 50%
-      )
-      no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2 + 200px);
-    left: calc(50% - var(--circle-size) / 2 - 500px);
-
-    transform-origin: calc(50% + 400px);
-    animation: moveInCircle 40s linear infinite;
-
-    opacity: 1;
+  .projectIMG {
+    min-height: 400rem;
   }
-
-  .g4 {
-    position: absolute;
-    background: radial-gradient(
-        circle at center,
-        rgba(var(--color4), 0.8) 0,
-        rgba(var(--color4), 0) 50%
-      )
-      no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-
-    transform-origin: calc(50% - 200px);
-    animation: moveHorizontal 40s ease infinite;
-
-    opacity: 0.7;
-  }
-
-  .g5 {
-    position: absolute;
-    background: radial-gradient(
-        circle at center,
-        rgba(var(--color5), 0.8) 0,
-        rgba(var(--color5), 0) 50%
-      )
-      no-repeat;
-    mix-blend-mode: var(--blending);
-
-    width: calc(var(--circle-size) * 2);
-    height: calc(var(--circle-size) * 2);
-    top: calc(50% - var(--circle-size));
-    left: calc(50% - var(--circle-size));
-
-    transform-origin: calc(50% - 800px) calc(50% + 200px);
-    animation: moveInCircle 20s ease infinite;
-
-    opacity: 1;
-  }
-
-  .interactive {
-    position: absolute;
-    background: radial-gradient(
-        circle at center,
-        rgba(var(--color-interactive), 0.8) 0,
-        rgba(var(--color-interactive), 0) 50%
-      )
-      no-repeat;
-    mix-blend-mode: var(--blending);
-
+  .project > div {
     width: 100%;
-    height: 100%;
-    top: -50%;
-    left: -50%;
-
-    opacity: 0.7;
+  }
+  #programCase .program {
+    width: 40%;
   }
 }
 
